# devops-assessment

./: .editorconfig  .env.example  .gitignore  README.md  compose.yaml
.github/workflows/: infra-ci.yaml  infra-platform.yaml  oidc-claims.yaml  service-ci.yaml  service-delivery.yaml  service-deploy-environment.yaml
app/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
app/api/migrations/: env.py
app/api/migrations/versions/: 0001_create_contact_messages_table.py
app/api/portfolio_api/: config.py  database.py  environments.py  main.py  metrics.py  models.py  routes.py  schemas.py
app/api/tests/: conftest.py  test_config.py  test_contact.py  test_health.py  test_metrics.py
app/web/: Dockerfile  package-lock.json  package.json
deploy/: README.md
deploy/base/: api-deployment.yaml  api-service.yaml  kustomization.yaml  web-deployment.yaml  web-service.yaml
docs/: infra-pipeline-design.md  pipeline-design.md
docs/adr/: 0001-cost-optimized-topology.md
infra/bootstrap/: .terraform.lock.hcl  README.md  deployment-identity.tf  identity.tf  outputs.tf  platform-policy.tf  state.tf  terraform.tfvars.example  variables.tf  versions.tf
infra/platform/: README.md  (+11 more)
scripts/: apply-service-secrets.sh  render-alb-config.sh  render-service-release.sh  render-terraform-platform-config.sh  run-service-migration.sh  service-deploy-preflight.sh  service-rollout.sh  smoke-test-service.sh  test-render-terraform-platform-config.sh  test-service-deploy-helpers.sh  test-write-acs-kubeconfig.sh  validate-kubernetes.sh  validate-terraform.sh  write-acs-kubeconfig.sh
(+40 files in other folders)
